<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:baselineAligned="false"
    tools:context="com.codenamegradient.gpsscanner.MainActivity">

    <!-- map view -->
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:context="com.codenamegradient.gpsscanner.MainActivity" />

    <!-- contains all output text views -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <!-- left column -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginTop="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/latitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/latitude_default"
                        android:textColor="@color/colorTextNormal" />

                    <TextView
                        android:id="@+id/longitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/longitude_default"
                        android:textColor="@color/colorTextNormal" />

                    <TextView
                        android:id="@+id/accuracy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/accuracy_default"
                        android:textColor="@color/colorTextNormal" />

                    <TextView
                        android:id="@+id/bearing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/bearing_default"
                        android:textColor="@color/colorTextNormal" />

                    <TextView
                        android:id="@+id/altitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/altitude_default"
                        android:textColor="@color/colorTextNormal" />

                    <TextView
                        android:id="@+id/speed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/speed_default"
                        android:textColor="@color/colorTextNormal" />

                    <TextView
                        android:id="@+id/speedKilometers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/speed_kmh_default"
                        android:textColor="@color/colorTextNormal" />

                    <TextView
                        android:id="@+id/speedMiles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/speed_mph_default"
                        android:textColor="@color/colorTextNormal" />

                    <TextView
                        android:id="@+id/speedKnots"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/speed_knots_default"
                        android:textColor="@color/colorTextNormal" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/time_default"
                        android:textColor="@color/colorTextNormal" />

                    <TextView
                        android:id="@+id/timeHuman"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/time_human_default"
                        android:textColor="@color/colorTextNormal" />

                    <TextView
                        android:id="@+id/provider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/provider_default"
                        android:textColor="@color/colorTextNormal" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/cycleMapType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="mapTypePicker"
                android:text="@string/map_normal" />

            <Button
                android:id="@+id/mapZoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="mapZoomPicker"
                android:text="@string/zoom_default" />

            <Button
                android:id="@+id/mapTilt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="mapTiltPicker"
                android:text="@string/tilt_default" />

        </LinearLayout>

    </LinearLayout>

    <!-- pause button -->
    <Button
        android:id="@+id/pauseResume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButtonActive"
        android:onClick="togglePause"
        android:text="@string/pause" />

</LinearLayout>
